spec/operations/demo-ingress.yaml
# Nothing interesting about this file, it's just so there's something 
#  deployed to run an Operation against.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app
  namespace: default
spec:
  rules:
  - host: google.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nonexistent-service
            port:
              number: 80
